kustomize/base/checkoutservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  namespace: core
  labels:
    app: checkoutservice
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
    - name: grpc
      port: 5050
      targetPort: 5050
